[workspace]
resolver = "2"
members = [
    "packages/*",
    "tests/*",
    "examples/*"
]

exclude = []

[workspace.package]
# https://doc.rust-lang.org/cargo/reference/workspaces.html
version = "0.1.0"
edition = "2021"
description = """
Quaix Framework is an AI engineering framework designed to streamline the development of AI applications.
It provides developers with a comprehensive set of tools and resources to efficiently build and deploy AI systems.
With Quaix Framework, developers can leverage cutting-edge AI algorithms and easily integrate them into their existing projects.
It focuses on optimizing the engineering aspects of AI development, enabling developers to create robust and scalable AI solutions.
"""
homepage = "https://xxx.rs"
repository = "https://github.com/xxx"
documentation = "https://docs.rs/xxx/"
readme = "./README.md"
keywords = ["ai", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = [""]

[workspace.dependencies]
